5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1585_2895.log
== TEST (2019-03-21 11:42:42) 
-- CODE:
quantidade = int(input(2)
valor = int(input(100))
f1 = 25
f2 = 10					  
f3 = 15					  
print()					  
-- ERROR:
File "XXXX", line 2
    valor = int(input(100))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:08:56) 
-- CODE:
quantidade =input()
valor =input(100)
frete =input(40)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:08:59) 
-- CODE:
quantidade =input()
valor =input(100)
frete =input(40)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:09:03) 
-- CODE:
quantidade =input()
valor =input(100)
frete =input(40)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:11:33) 
-- CODE:
quantidade =input()
valor =int(input(100))
frete =int(input(40))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor =int(input(100))
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:14:55) 
-- CODE:
quantidade =input(2)
valor =int(input(100))
frete =int(input())
total= (valor+frete*quantidade)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor =int(input(100))
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:16:32) 
-- CODE:
jogo =(100)
quantidade =input(2)
frete =int(input())
total= (jogo+frete*quantidade)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete =int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:17:23) 
-- CODE:
jogo =(100)
quantidade =input(2)
frete =int(input())
total= (jogo*quantidade+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete =int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:17:33) 
-- CODE:
jogo =(100)
quantidade =input(2)
frete =int(input())
total= (jogo*quantidade*frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete =int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:17:45) 
-- CODE:
jogo =(100)
quantidade =input()
frete =int(input(45))
total= (jogo*quantidade*frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frete =int(input(45))
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:15) 
-- CODE:
jogo =(100)
quantidade =input(2)
frete =float(input())
total= (jogo*quantidade*frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= (jogo*quantidade*frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:20) 
-- CODE:
quan= int(input("quantidade de jogos:"))
valor= float(input("valor do jogo:"))
frete= float(input("valor do frete:"))
total= (quant*valor+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= (quant*valor+frete)
NameError: name 'quant' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:44) 
-- CODE:
quan= int(input("quantidade de jogos:"))
valor= float(input("valor do jogo:"))
frete= float(input("valor do frete:"))
total= (quan*valor+frete)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:22:53) 
-- CODE:
quan= int(input("quantidade de jogos:"))
valor= float(input("valor do jogo:"))
frete= float(input("valor do frete:"))
total= (quan*valor+frete)
print(total)
-- EXECUTION TIME:
0.154652
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
